Added random map generation
Also fixed bug with finding adjacent cells

--- a/Game.html
+++ b/Game.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>SamuraiCastle</title>
+    <script src='js/perlin.js'></script>
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/snap.svg.js"></script>
     <script src="Build/SamuraiCastle.js"></script>
